<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="Whipped_cream">Whipped Cream</string>
    <string name="Chocolate_cream">Chocolate Cream</string>
    <string name="quantity">Quantity</string>
    <string name="price"><xliff:g id="price: " example="$10">%s</xliff:g></string>
    <string name="_2">2</string>
    <string name="order">ORDER</string>
    <string name="thank_you">Thank you</string>
    <string name="just_java_order_app_for"> Just Java order app for: <xliff:g example="Amy" id="Name">%s</xliff:g></string>
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="Name">%s</xliff:g></string>
</resources>
